	NULL in case of failure. The return value of asprintf shall be
	checked.
	* lib/tcbfuncs.c: Avoid implicit conversion of pointers or
	integers to booleans.
	* lib/tcbfuncs.c: Avoid assignments in comparisons.
	* lib/tcbfuncs.c: Do not free path before its last use.
	* lib/tcbfuncs.c: Include shadowio.h, needed for the
	spw_setdbname's prototype.
	* lib/tcbfuncs.c: Ignore fflush() return value.

2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Avoid implicit conversion of pointers to
	booleans.
	* lib/commonio.c: Ignore the return value of close when a
	failure is reported.

2010-03-16  Nicolas François  <nicolas.francois@centraliens.net>

	* man/faillog.8.xml: Document the behavior in display mode of the
	-a option.
	* NEWS, man/faillog.8.xml, src/faillog.c: Extend the -a option to
	the non-display mode. This changes the default behavior of the -l,
	-m, -r, -t options when -a is not specified (restrict to existing
	users).

2010-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chage.1.xml, man/login.defs.5.xml, man/pwck.8.xml,
	man/pwconv.8.xml, man/useradd.8.xml, man/userdel.8.xml,
	man/usermod.8.xml, man/vipw.8.xml: Document the usage of the
	TCB_AUTH_GROUP, TCB_SYMLINKS, and USE_TCB configuration
	parameters.
	* man/pwconv.8.xml, man/pwck.8.xml: Document the behavior when
	USE_TCB is enabled.

2010-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* po/POTFILES.in, lib/tcbfuncs.c: Add more strings for
	translation.
	* lib/tcbfuncs.c: Indicate the name of the program in error
	messages. Avoid perror.
	* src/useradd.c: Re-indent.
	* src/useradd.c: Add more strings for translation. Indicate the
	name of the program in error messages.
	* src/userdel.c: Re-indent.
	* src/userdel.c: Add more strings for translation. Indicate the
	name of the program in error messages.

2010-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: user_newname and user_newid cannot be used to