@@ -14,6 +14,7 @@
 	* lib/tcbfuncs.c: Include shadowio.h, needed for the
 	spw_setdbname's prototype.
 	* lib/tcbfuncs.c: Ignore fflush() return value.
+	* lib/tcbfuncs.c: Avoid implicit signed to unsigned conversions.
 
 2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>
 
